fix valueof